Adjust space action buttons in details view to stop Favorited button shift to next line in mobile

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -246,7 +246,7 @@ button {
         span { font-size: 13px; }
     }
 	.space-actions{ margin-left: 2px; padding-top: 5px; margin-bottom: 5px;
-		button{padding: 5px 10px 3px 10px !important;
+		button{padding: 5px 7px 3px 7px !important;
 			.fa-mail-forward {margin-top: 1px !important; margin-bottom: 0px;}
 		}
 		.space-stars { margin-top: 2px;
@@ -303,7 +303,7 @@ div.actions { display: none;
     .space-actions { clear: both; display: relative; margin-bottom: 10px; margin-top: 5px;
         a#show_reviews:hover { text-decoration: none; }
     	span {font-size: 13px;}
-        button { background-color: #f2f2f2; color: @purple_text; border-radius: 4px !important; font-size: 13px; height: 32px; padding: 0px 10px;
+        button { background-color: #f2f2f2; color: @purple_text; border-radius: 4px !important; font-size: 13px; height: 32px; padding: 0px 7px;
         			border: 1px solid #d6d6d6 !important; margin: 0px 3px; 
         			background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
 					background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 100%);
